Update backend CORS for Netlify and fix login API call, adjust payment security